# teragested

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  README.rst  pytest.ini  requirements.txt  setup.cfg  setup.py
bashlex/: cli.py  enums.py  models.py
docs/: Makefile  authors.rst  bashlex.rst  changelog.rst  conf.py  index.rst  installation.rst  modules.rst  requirements.txt  teragested.rst  usage.rst
docs/reference/: index.rst  teragested.rst
teragested/: __init__.py  cli.py  enums.py  models.py  parser.py  syntax.py
