[metadata]
name = bashlex
url = https://github.com/demosdemon/bashlex
project_urls =
  Bug Tracker = https://github.com/demosdemon/bashlex/issues
  Documentation = https://github.com/demosdemon/bashlex/wiki
  Source Code = https://github.com/demosdemon/bashlex#README
author = LeBlanc Codes, LLC
author_email = bashlex@leblanc.codes
classifier =
  Development Status :: 4 - Beta
license = MIT
description = Parse Bourne Again Shell scripts into Abstract Syntax Trees
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
  bash
  parsy
  lexical analysis

[options]
packages =
  bashlex
setup_requires =
  pbr
install_requires =
  setuptools >= 38.6.0

[options.entry_points]
console_scripts =
  bashlex = bashlex.cli:main

[flake8]
ignore = E203, E266, E501, W503
max-complexity = 18
max-line-length = 88
select = B,C,E,F,W,T4,B9

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
forced_separate = bashlex
include_trailing_comma = True
indent = 4
line_length = 88
multi_line_output = 3
not_skip = __init__.py

[coverage:run]
branch = True
source = bashlex

[coverage:report]
show_missing = True
exclude_lines =
  pragma: no cover
  def __repr__
  raise AssertionError
  raise NotImplementedError
  if 0:
  if __name__ == .__main__.:
