[metadata]
name = teragested
url = https://github.com/demosdemon/teragested
project_urls =
  Bug Tracker = https://github.com/demosdemon/teragested/issues
  Documentation = https://github.com/demosdemon/teragested/wiki
  Source Code = https://github.com/demosdemon/teragested#README
author = LeBlanc Codes, LLC
author_email = teragested@leblanc.codes
classifier =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development
  Topic :: System :: System Shells
  Topic :: Text Processing
license = MIT
description = Parse Bourne Again Shell scripts into Abstract Syntax Trees
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
  bash
  parsy
  lexical analysis

[options]
packages =
  teragested
setup_requires =
  pbr
install_requires =
  setuptools >= 38.6.0

[options.entry_points]
console_scripts =
  teragested = teragested.cli:main

[flake8]
ignore = E203, E266, E501, W503
max-complexity = 18
max-line-length = 88
select = B,C,E,F,W,T4,B9

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
forced_separate = teragested
include_trailing_comma = True
indent = 4
line_length = 88
multi_line_output = 3
not_skip = __init__.py

[coverage:run]
branch = True
source = teragested

[coverage:report]
show_missing = True
exclude_lines =
  pragma: no cover
  def __repr__
  raise AssertionError
  raise NotImplementedError
  if 0:
  if __name__ == .__main__.:
